--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-import": "^1.10.0",
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "antd": "^3.10.2",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
@@ -33,6 +35,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "if-env": "^1.0.4",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
