--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
+    "newsapi": "^2.4.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
