--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.2",
     "connect-mongo": "^2.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
