--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "proxy": "http://127.0.0.1:3001/",
   "dependencies": {
+    "antd": "^3.10.4",
+    "axios": "^0.16.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14",
     "react-router-dom": "^4.1.2",
-    "axios": "^0.16.2"
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
