--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "gavagai": "^0.2.2",
     "if-env": "^1.0.4",
     "moment": "^2.22.2",
     "mongoose": "^5.3.4",
