--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "reactreadinglist-auth-client",
+  "name": "real-fake-news-intel",
   "version": "1.0.0",
   "private": true,
   "proxy": "http://127.0.0.1:3001/",
   "dependencies": {
+    "@google-cloud/language": "^2.0.0",
     "antd": "^3.10.4",
     "axios": "^0.16.2",
     "react": "^16.0.0",
